--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
       content="Old School RuneScape-themed UI components built on shadcn/ui."
     />
     <meta property="og:url" content="https://runescapecn.com/" />
-    <meta property="og:image" content="https://runescapecn.com/logo.svg" />
+    <meta property="og:image" content="https://runescapecn.com/ogimage.png" />
+    <meta property="og:image:secure_url" content="https://runescapecn.com/ogimage.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="runescapecn - Old School RuneScape UI Components" />
 
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="runescapecn" />
     <meta
       name="twitter:description"
       content="Old School RuneScape-themed UI components built on shadcn/ui."
     />
-    <meta name="twitter:image" content="https://runescapecn.com/logo.svg" />
+    <meta name="twitter:image" content="https://runescapecn.com/ogimage.png" />
+    <meta name="twitter:image:alt" content="runescapecn - Old School RuneScape UI Components" />
   </head>
   <body>
     <div id="root"></div>
