fix: og image for socials

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <link rel="canonical" href="https://runescapecn.com/" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
+    <!-- Open Graph / Facebook / LinkedIn / Discord / WhatsApp / Telegram -->
     <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="runescapecn" />
     <meta
       property="og:title"
@@ -38,8 +40,14 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="runescapecn - Old School RuneScape UI Components" />
 
+    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="runescapecn" />
+    <meta name="twitter:site" content="@alns0_" />
+    <meta name="twitter:creator" content="@alns0_" />
+    <meta
+      name="twitter:title"
+      content="runescapecn | Old School RuneScape UI Components"
+    />
     <meta
       name="twitter:description"
       content="Old School RuneScape-themed UI components built on shadcn/ui."
